GCS/Antlr/GT/ListasMistas/.antlr/ListasMistasParser.java
// Generated from /Users/etiennecosta/Desktop/Mestrado/PLC/GCS/Antlr4/ListasMistas/ListasMistas.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ListasMistasParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LISTA=3, PALAVRA=4, NUMERO=5, WS=6;
	public static final int
		RULE_listas = 0, RULE_lista = 1, RULE_exps = 2, RULE_exp = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"listas", "lista", "exps", "exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LISTA", "PALAVRA", "NUMERO", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ListasMistas.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	 
	      int numeros=0,size=0,soma=0,media=0,palavras=0;
	      int max = Integer.MIN_VALUE;
	      boolean start = false, stop = false;

	public ListasMistasParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListasContext extends ParserRuleContext {
		public List<ListaContext> lista() {
			return getRuleContexts(ListaContext.class);
		}
		public ListaContext lista(int i) {
			return getRuleContext(ListaContext.class,i);
		}
		public ListasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listas; }
	}

	public final ListasContext listas() throws RecognitionException {
		ListasContext _localctx = new ListasContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_listas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(9); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(8);
				lista();
				}
				}
				setState(11); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LISTA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaContext extends ParserRuleContext {
		public TerminalNode LISTA() { return getToken(ListasMistasParser.LISTA, 0); }
		public ExpsContext exps() {
			return getRuleContext(ExpsContext.class,0);
		}
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lista);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			match(LISTA);
			setState(14);
			exps();
			setState(15);
			match(T__0);
			 

			                  
			                  System.out.println("--------------------------------------------------------");
			                  System.out.println("Comprimento da lista: "+size);
			                  System.out.println("Quantidade de números: "+numeros);

			                  if(numeros!=0) {
			                        if(stop!=true)
			                              soma=0;
			                  System.out.println("Máximo dos números: "+max);
			                  System.out.println("Somatório dos números: "+soma);
			                  System.out.println("Média: "+media/(double)numeros);
			                              
			                              }

			                  if(numeros==palavras)
			                        System.out.println("Quantidade de palavras ("+palavras+") == Quantidade de números ("+numeros+")");

			                  else 
			                        System.out.println("Quantidade de palavras ("+palavras+") =/= Quantidade de números ("+numeros+")");


			                  System.out.println();
			                  numeros=0;  media=0; size=0; soma = 0 ;  palavras = 0;
			                  max= Integer.MIN_VALUE;
			                  start = false; stop = false;
			                 

			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpsContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ExpsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exps; }
	}

	public final ExpsContext exps() throws RecognitionException {
		ExpsContext _localctx = new ExpsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exps);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			exp();
			size++;
			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(20);
				match(T__1);
				setState(21);
				exp();
				size++;
				}
				}
				setState(28);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public Token PALAVRA;
		public Token NUMERO;
		public TerminalNode PALAVRA() { return getToken(ListasMistasParser.PALAVRA, 0); }
		public TerminalNode NUMERO() { return getToken(ListasMistasParser.NUMERO, 0); }
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_exp);
		try {
			setState(33);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PALAVRA:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				((ExpContext)_localctx).PALAVRA = match(PALAVRA);
				 if((((ExpContext)_localctx).PALAVRA!=null?((ExpContext)_localctx).PALAVRA.getText():null).equals("start")) 
				                        start = true;

				                   if((((ExpContext)_localctx).PALAVRA!=null?((ExpContext)_localctx).PALAVRA.getText():null).equals("stop")&& start==true) {
				                        stop = true;
				                        start=false;
				                   }

				                  palavras++;
				                
				}
				break;
			case NUMERO:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				((ExpContext)_localctx).NUMERO = match(NUMERO);
				    numeros++; 
				                   media+=(((ExpContext)_localctx).NUMERO!=null?Integer.valueOf(((ExpContext)_localctx).NUMERO.getText()):0);
				 
				                  if(start==true)
				                        soma+=(((ExpContext)_localctx).NUMERO!=null?Integer.valueOf(((ExpContext)_localctx).NUMERO.getText()):0);
				            

				                  if((((ExpContext)_localctx).NUMERO!=null?Integer.valueOf(((ExpContext)_localctx).NUMERO.getText()):0) > max)
				                        max=(((ExpContext)_localctx).NUMERO!=null?Integer.valueOf(((ExpContext)_localctx).NUMERO.getText()):0);

				              
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}